@@ -1661,6 +1661,7 @@
             <left>-10000</left>
             <width>10</width>
             <height>1</height>
+            <onfocus>SetProperty(SortLetter,$INFO[ListItem.SortLetter],Home)</onfocus>
             <onfocus condition="!String.IsEqual(ListItem.SortLetter,A) + !String.IsEqual(ListItem.SortLetter,B) + !String.IsEqual(ListItem.SortLetter,C) + !String.IsEqual(ListItem.SortLetter,D) + !String.IsEqual(ListItem.SortLetter,E) + !String.IsEqual(ListItem.SortLetter,F) + !String.IsEqual(ListItem.SortLetter,G) + !String.IsEqual(ListItem.SortLetter,H) + !String.IsEqual(ListItem.SortLetter,I) + !String.IsEqual(ListItem.SortLetter,J) + !String.IsEqual(ListItem.SortLetter,K) + !String.IsEqual(ListItem.SortLetter,L) + !String.IsEqual(ListItem.SortLetter,M) + !String.IsEqual(ListItem.SortLetter,N) + !String.IsEqual(ListItem.SortLetter,O) + !String.IsEqual(ListItem.SortLetter,P) + !String.IsEqual(ListItem.SortLetter,Q) + !String.IsEqual(ListItem.SortLetter,R) + !String.IsEqual(ListItem.SortLetter,S) + !String.IsEqual(ListItem.SortLetter,T) + !String.IsEqual(ListItem.SortLetter,U) + !String.IsEqual(ListItem.SortLetter,V) + !String.IsEqual(ListItem.SortLetter,W) + !String.IsEqual(ListItem.SortLetter,X) + !String.IsEqual(ListItem.SortLetter,Y) + !String.IsEqual(ListItem.SortLetter,Z)">SetFocus(8001,0)</onfocus>
             <onfocus condition="String.IsEqual(ListItem.SortLetter,A)">SetFocus(8001,1)</onfocus>
             <onfocus condition="String.IsEqual(ListItem.SortLetter,B)">SetFocus(8001,2)</onfocus>
@@ -1717,7 +1718,7 @@
                         <label>$INFO[ListItem.Label]</label>
                         <textcolor>main_fg_100</textcolor>
                         <font>font_small_bold</font>
-                        <visible>String.IsEqual(ListItem.Label,Container.ListItem.SortLetter) | [String.IsEqual(ListItem.Label,#) + !String.IsEqual(Container.ListItem.SortLetter,A) + !String.IsEqual(Container.ListItem.SortLetter,B) + !String.IsEqual(Container.ListItem.SortLetter,C) + !String.IsEqual(Container.ListItem.SortLetter,D) + !String.IsEqual(Container.ListItem.SortLetter,E) + !String.IsEqual(Container.ListItem.SortLetter,F) + !String.IsEqual(Container.ListItem.SortLetter,G) + !String.IsEqual(Container.ListItem.SortLetter,H) + !String.IsEqual(Container.ListItem.SortLetter,I) + !String.IsEqual(Container.ListItem.SortLetter,J) + !String.IsEqual(Container.ListItem.SortLetter,K) + !String.IsEqual(Container.ListItem.SortLetter,L) + !String.IsEqual(Container.ListItem.SortLetter,M) + !String.IsEqual(Container.ListItem.SortLetter,N) + !String.IsEqual(Container.ListItem.SortLetter,O) + !String.IsEqual(Container.ListItem.SortLetter,P) + !String.IsEqual(Container.ListItem.SortLetter,Q) + !String.IsEqual(Container.ListItem.SortLetter,R) + !String.IsEqual(Container.ListItem.SortLetter,S) + !String.IsEqual(Container.ListItem.SortLetter,T) + !String.IsEqual(Container.ListItem.SortLetter,U) + !String.IsEqual(Container.ListItem.SortLetter,V) + !String.IsEqual(Container.ListItem.SortLetter,W) + !String.IsEqual(Container.ListItem.SortLetter,X) + !String.IsEqual(Container.ListItem.SortLetter,Y) + !String.IsEqual(Container.ListItem.SortLetter,Z)]</visible>
+                        <visible>String.IsEqual(ListItem.Label,Window(Home).Property(SortLetter)) | [String.IsEqual(ListItem.Label,#) + !String.IsEqual(Window(Home).Property(SortLetter),A) + !String.IsEqual(Window(Home).Property(SortLetter),B) + !String.IsEqual(Window(Home).Property(SortLetter),C) + !String.IsEqual(Window(Home).Property(SortLetter),D) + !String.IsEqual(Window(Home).Property(SortLetter),E) + !String.IsEqual(Window(Home).Property(SortLetter),F) + !String.IsEqual(Window(Home).Property(SortLetter),G) + !String.IsEqual(Window(Home).Property(SortLetter),H) + !String.IsEqual(Window(Home).Property(SortLetter),I) + !String.IsEqual(Window(Home).Property(SortLetter),J) + !String.IsEqual(Window(Home).Property(SortLetter),K) + !String.IsEqual(Window(Home).Property(SortLetter),L) + !String.IsEqual(Window(Home).Property(SortLetter),M) + !String.IsEqual(Window(Home).Property(SortLetter),N) + !String.IsEqual(Window(Home).Property(SortLetter),O) + !String.IsEqual(Window(Home).Property(SortLetter),P) + !String.IsEqual(Window(Home).Property(SortLetter),Q) + !String.IsEqual(Window(Home).Property(SortLetter),R) + !String.IsEqual(Window(Home).Property(SortLetter),S) + !String.IsEqual(Window(Home).Property(SortLetter),T) + !String.IsEqual(Window(Home).Property(SortLetter),U) + !String.IsEqual(Window(Home).Property(SortLetter),V) + !String.IsEqual(Window(Home).Property(SortLetter),W) + !String.IsEqual(Window(Home).Property(SortLetter),X) + !String.IsEqual(Window(Home).Property(SortLetter),Y) + !String.IsEqual(Window(Home).Property(SortLetter),Z)]</visible>
                     </control>
                 </itemlayout>
                 <focusedlayout height="view_pad" width="42">
@@ -1741,7 +1742,7 @@
                         <label>$INFO[ListItem.Label]</label>
                         <textcolor>Selected</textcolor>
                         <font>font_small_bold</font>
-                        <visible>String.IsEqual(ListItem.Label,Container.ListItem.SortLetter) | [String.IsEqual(ListItem.Label,#) + !String.IsEqual(Container.ListItem.SortLetter,A) + !String.IsEqual(Container.ListItem.SortLetter,B) + !String.IsEqual(Container.ListItem.SortLetter,C) + !String.IsEqual(Container.ListItem.SortLetter,D) + !String.IsEqual(Container.ListItem.SortLetter,E) + !String.IsEqual(Container.ListItem.SortLetter,F) + !String.IsEqual(Container.ListItem.SortLetter,G) + !String.IsEqual(Container.ListItem.SortLetter,H) + !String.IsEqual(Container.ListItem.SortLetter,I) + !String.IsEqual(Container.ListItem.SortLetter,J) + !String.IsEqual(Container.ListItem.SortLetter,K) + !String.IsEqual(Container.ListItem.SortLetter,L) + !String.IsEqual(Container.ListItem.SortLetter,M) + !String.IsEqual(Container.ListItem.SortLetter,N) + !String.IsEqual(Container.ListItem.SortLetter,O) + !String.IsEqual(Container.ListItem.SortLetter,P) + !String.IsEqual(Container.ListItem.SortLetter,Q) + !String.IsEqual(Container.ListItem.SortLetter,R) + !String.IsEqual(Container.ListItem.SortLetter,S) + !String.IsEqual(Container.ListItem.SortLetter,T) + !String.IsEqual(Container.ListItem.SortLetter,U) + !String.IsEqual(Container.ListItem.SortLetter,V) + !String.IsEqual(Container.ListItem.SortLetter,W) + !String.IsEqual(Container.ListItem.SortLetter,X) + !String.IsEqual(Container.ListItem.SortLetter,Y) + !String.IsEqual(Container.ListItem.SortLetter,Z)]</visible>
+                        <visible>String.IsEqual(ListItem.Label,Window(Home).Property(SortLetter)) | [String.IsEqual(ListItem.Label,#) + !String.IsEqual(Window(Home).Property(SortLetter),A) + !String.IsEqual(Window(Home).Property(SortLetter),B) + !String.IsEqual(Window(Home).Property(SortLetter),C) + !String.IsEqual(Window(Home).Property(SortLetter),D) + !String.IsEqual(Window(Home).Property(SortLetter),E) + !String.IsEqual(Window(Home).Property(SortLetter),F) + !String.IsEqual(Window(Home).Property(SortLetter),G) + !String.IsEqual(Window(Home).Property(SortLetter),H) + !String.IsEqual(Window(Home).Property(SortLetter),I) + !String.IsEqual(Window(Home).Property(SortLetter),J) + !String.IsEqual(Window(Home).Property(SortLetter),K) + !String.IsEqual(Window(Home).Property(SortLetter),L) + !String.IsEqual(Window(Home).Property(SortLetter),M) + !String.IsEqual(Window(Home).Property(SortLetter),N) + !String.IsEqual(Window(Home).Property(SortLetter),O) + !String.IsEqual(Window(Home).Property(SortLetter),P) + !String.IsEqual(Window(Home).Property(SortLetter),Q) + !String.IsEqual(Window(Home).Property(SortLetter),R) + !String.IsEqual(Window(Home).Property(SortLetter),S) + !String.IsEqual(Window(Home).Property(SortLetter),T) + !String.IsEqual(Window(Home).Property(SortLetter),U) + !String.IsEqual(Window(Home).Property(SortLetter),V) + !String.IsEqual(Window(Home).Property(SortLetter),W) + !String.IsEqual(Window(Home).Property(SortLetter),X) + !String.IsEqual(Window(Home).Property(SortLetter),Y) + !String.IsEqual(Window(Home).Property(SortLetter),Z)]</visible>
                     </control>
                     <include>Object_AlphabetStrip_Skipper</include>
                 </focusedlayout>
@@ -1760,7 +1761,9 @@
             <visible>$PARAM[visible]</visible>
             <showonepage>false</showonepage>
             <orientation>vertical</orientation>
-            <onright>50</onright>
+            <onright condition="[String.IsEqual(Container.SortMethod,$LOCALIZE[551]) | String.IsEqual(Container.SortMethod,$LOCALIZE[556]) | String.IsEqual(Container.SortMethod,$LOCALIZE[557]) | String.IsEqual(Container.SortMethod,$LOCALIZE[558])] + !Container.Content(seasons) + [Control.IsEnabled(3) | Control.IsEnabled(4)] + Skin.HasSetting(AlphabetStrip)">SetFocus(8000)</onright>
+            <onright condition="![[String.IsEqual(Container.SortMethod,$LOCALIZE[551]) | String.IsEqual(Container.SortMethod,$LOCALIZE[556]) | String.IsEqual(Container.SortMethod,$LOCALIZE[557]) | String.IsEqual(Container.SortMethod,$LOCALIZE[558])] + !Container.Content(seasons) + [Control.IsEnabled(3) | Control.IsEnabled(4)]] + Skin.HasSetting(AlphabetStrip)">Notification($LOCALIZE[161],$LOCALIZE[31334])</onright>
+            <onright condition="!Skin.HasSetting(AlphabetStrip)">50</onright>
             <onleft>50</onleft>
             <texturesliderbackground colordiffuse="main_fg_12" border="4">common/white.png</texturesliderbackground>
             <texturesliderbar colordiffuse="main_fg_30" border="4">scrollbar/scrollv.png</texturesliderbar>
@@ -1784,7 +1787,9 @@
             <orientation>horizontal</orientation>
             <onup>50</onup>
             <visible>$PARAM[visible]</visible>
-            <ondown>50</ondown>
+            <ondown condition="[String.IsEqual(Container.SortMethod,$LOCALIZE[551]) | String.IsEqual(Container.SortMethod,$LOCALIZE[556]) | String.IsEqual(Container.SortMethod,$LOCALIZE[557]) | String.IsEqual(Container.SortMethod,$LOCALIZE[558])] + !Container.Content(seasons) + [Control.IsEnabled(3) | Control.IsEnabled(4)] + Skin.HasSetting(AlphabetStrip)">SetFocus(8000)</ondown>
+            <ondown condition="![[String.IsEqual(Container.SortMethod,$LOCALIZE[551]) | String.IsEqual(Container.SortMethod,$LOCALIZE[556]) | String.IsEqual(Container.SortMethod,$LOCALIZE[557]) | String.IsEqual(Container.SortMethod,$LOCALIZE[558])] + !Container.Content(seasons) + [Control.IsEnabled(3) | Control.IsEnabled(4)]] + Skin.HasSetting(AlphabetStrip)">Notification($LOCALIZE[161],$LOCALIZE[31334])</ondown>
+            <ondown condition="!Skin.HasSetting(AlphabetStrip)">50</ondown>
             <texturesliderbackground colordiffuse="main_fg_12" border="4">common/white.png</texturesliderbackground>
             <texturesliderbar colordiffuse="main_fg_30" border="4">scrollbar/scrollv.png</texturesliderbar>
             <texturesliderbarfocus colordiffuse="$VAR[ColorHighlight]" border="4">scrollbar/scrollv.png</texturesliderbarfocus>
