@@ -2,6 +2,7 @@
 DIALOGVIDEOINFO - Fix for trailer button (hopefully)
 DIALOGSELECT - Fix for weird multilines
 PVR - Hopefully fix artwork and info overlap issues
+LEIA - Return of Alphabet Strip
 
 [B]0.9.27[/B]
 SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
